--- a/Invessence/modules/web/src/main/webapp/resources/uob/1_3/css/uob.css
+++ b/Invessence/modules/web/src/main/webapp/resources/uob/1_3/css/uob.css
@@ -3369,3 +3369,9 @@ border: 0px!important;
     }
 }
 
+/*** 04/10/2017 **/
+.login_bg{
+    background-image:url("#{resource['uob:images/loginpageillust.svg']}");
+    background-repeat:no-repeat;
+    background-position:center; background-size:cover;
+}
