--- a/Invessence/modules/web/src/main/webapp/resources/nestegg/1_0/css/nestegg.css
+++ b/Invessence/modules/web/src/main/webapp/resources/nestegg/1_0/css/nestegg.css
@@ -4536,3 +4536,10 @@ tbody > tr > .AdvtcmLayoutColumn > span:nth-child(2) {
 #redTailWidgetDiv iframe .navbar-brand img {display: none !important; height: 0px !important;}
 
 #redTailWidgetDiv .navbar-brand>img, #redTailWidgetDiv .navbar-brand, .navbar-brand,.hiddenall  {display: none !important; height: 0px !important; width: 0px !important;}
+
+/*** 04/10/2017 **/
+.login_bg{
+    background-image:url("#{resource['uob:images/neloginpageillust.svg']}");
+    background-repeat:no-repeat;
+    background-position:center; background-size:cover;
+}
