--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
@@ -317,7 +317,12 @@
                                             <span class="alert_date">19/07/02017</span>
                                         </ui:fragment>
                                         <ui:fragment rendered='#{notfBn.linkAvailable}'>
-                                            <a href="http://localhost:8086/pages/consumer/uob/cadd.xhtml?app=N"><h:outputText value="Click"/></a>
+                                            <a href="http://localhost:8086/pages/consumer/uob/cadd.xhtml?app=N">
+                                                <span class="external_link_click">
+                                                    <h:outputText value="Click"/>
+                                                    <span class="ui-button-icon-center ui-icon ui-c fa fa-external-link click_icon" ></span>
+                                                </span>
+                                            </a>
                                         </ui:fragment>
                                     </div>
                                 </p:repeat>
