--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
@@ -314,7 +314,7 @@
                                                         X
                                                     </p:commandLink>
                                                     </span>
-                                            <span class="alert_date">19/07/02017</span>
+                                            <span class="alert_date"><h:outputText value="#{notfBn.businessdate}"/></span>
                                         </ui:fragment>
                                         <ui:fragment rendered='#{notfBn.linkAvailable}'>
                                             <a href="http://localhost:8086/pages/consumer/uob/cadd.xhtml?app=N">
