--- a/Invessence/modules/web/src/main/webapp/resources/invessence/1_5/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/1_5/css/invessenceCustom.css
@@ -1769,7 +1769,7 @@ a {
     padding-top: 50px;
 }
 .layout-portlets-box.strategy_layout {
-    margin-top: -50px;
+    /*margin-top: -50px;*/
 }
 
 .RightPanel {
